# consul-api-sidecar

./: .gitignore  Cargo.toml  Dockerfile.distroless.agent  Dockerfile.distroless.sidecar  Dockerfile.scratch.agent  Dockerfile.scratch.sidecar  LICENSE
examples/: dns_bridge_tcp.rs  dns_bridge_udp.rs
nomad/: consul-api-agent.nomad  consul-api-sidecar-example.nomad
src/: agent.rs  client.rs  lib.rs  meta.rs  server.rs  service.rs  sidecar.rs  task.rs
src/config/: agent.rs  loader.rs  mod.rs  sidecar.rs
src/dns/: bridge.rs  client.rs  egress_bridge.rs  ingress_bridge.rs  mod.rs  server.rs  service.rs
src/dns/channel/: client.rs  server.rs
src/dns/forwarder/: mod.rs  tcp.rs  udp.rs
src/handshake/: frame.rs  mod.rs
src/tcp/: fwd.rs  mod.rs  service.rs
src/testing/: mod.rs
