[package]
name = "consul-api-sidecar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["server", "client", "http1", "tcp", "stream"] }
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive", "std"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["rt", "net", "macros", "tracing", "signal", "time", "sync"] }
tokio-util = { version = "0.7.4", features = ["codec", "compat"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
yamux = "0.11.0"

[[bin]]
name = "consul-api-sidecar"
path = "src/sidecar.rs"

[[bin]]
name = "consul-api-agent"
path = "src/agent.rs"
