[package]
name = "consul-api-sidecar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.61"
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive", "std"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["rt", "net", "macros", "tracing", "signal", "time", "sync", "fs"] }
tokio-util = { version = "0.7.4", features = ["codec", "compat"] }
toml = "0.5.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"

[[bin]]
name = "consul-api-sidecar"
path = "src/sidecar.rs"

[[bin]]
name = "consul-api-agent"
path = "src/agent.rs"
